--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,11 +23,6 @@
   color: #61dafb;
 }
 
-button {
-  margin: 1rem 2rem;
-  width: 200px;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -38,19 +33,77 @@ button {
 }
 
 /* Home */
-input {
+.home-input {
   height: 50px;
-  min-width: 300px;
+  min-width: 400px;
   margin: 2% 0;
   font-size: 1.2rem;
+}
+
+#home-btn {
+  margin: 1rem;
+  width: 200px;
 }
 
 /* Create */
 .create-div {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  align-items: flex-start;
   margin: 2% 7%;
+  height: 100vh;
 }
+
+.create-div h1 {
+  margin: 5% 0;
+}
+
+.order-div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.order-input {
+  height: 50px;
+  min-width: 400px;
+  margin-bottom: 5%;
+}
+
+.order-btn-div {
+  display: flex;
+  justify-content: space-between;
+  min-width: 400px;
+  margin-top: 20%;
+}
+
+.custom-back {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border-color: white;
+  background-image: url('./icons/back.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  font-size: 0;
+  outline: 0;
+}
+
+#add-order {
+  position: relative;
+}
+
+#add-order-btn, #find-item-btn {
+  height: 50px;
+  border-radius: 20%;
+  margin: 0 3%;
+  position: absolute;
+}
+
+#place-order {
+  width: 200px;
+}
+
+
 
 
